@@ -117,6 +117,7 @@ LUFA_PATH = ../..
 # LUFA library compile-time options
 LUFA_OPTS  = -D USB_DEVICE_ONLY
 LUFA_OPTS += -D USE_NONSTANDARD_DESCRIPTOR_NAMES
+LUFA_OPTS += -D DEVICE_STATE_AS_GPIOR0
 LUFA_OPTS += -D CONTROL_ONLY_DEVICE
 LUFA_OPTS += -D FIXED_CONTROL_ENDPOINT_SIZE=32
 LUFA_OPTS += -D TOTAL_NUM_CONFIGURATIONS=1
